--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "hono": "4.8.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
     "@eslint/js": "9.29.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "24.0.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
