--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
